<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To Do</string>
    
    <string name="title_tasks_list">To Do</string>
    <string name="title_task">To Do</string>
    <string name="title_date_picker">Select due date and time</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    
    <string name="et_hint_title">Enter task title</string>
    <string name="et_hint_description">Enter task description</string>
    <string name="et_hint_motto">Enter motto</string>
    
    <string name="tv_text_empty">Create a new task.</string>
    <string name="tv_text_about">This application was created by Alex Barkov. It is based on the CriminalIntent app from the <i>Android Programming: The Big Nerd Range Guide</i>.</string>
    
    <string name="cb_text_done">Done?</string>
	<string name="cb_text_motto">Show motto?</string>
	<string name="cb_text_theme">Use dark theme?</string>
	    
    <string name="item_new_task">New Task</string>
    <string name="item_delete_task">Delete Task</string>
    <string name="item_settings">Settings</string>
    <string name="item_about">About</string>
    
    <string name="btn_date_add">Add</string>
    <string name="btn_date_delete">Remove</string>
    
    <string name="report_done">Completed: </string>
    <string name="report_not_done">To do: </string>
    <string name="report_date">By: </string>
	<string name="report_send">Send task with: </string>
	
</resources>